# cfg_log

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
test_cfg_log/: Cargo.toml  README.md
test_cfg_log/src/: main.rs
tests/: test.rs
